Fix services alignment
Issue only presents on 4k+ resolution need to test to
confirm fix.

--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ a.button.hero{
 .services{
     margin: 5vw 20vw;
     margin-top: 0;
+    justify-content: stretch;
 }
 
 a.service{
